# cpp-game-engine

./: .gitignore  CMakeLists.txt  README.md  build.ps1
src/: game.cpp  main.cpp
src/core/: entity.cpp  entityManager.cpp
src/include/: game.hpp
src/include/common/: types.hpp
src/include/components/: collider.hpp  component_storage.hpp  renderable.hpp  transform.hpp
src/include/core/: entity.hpp  entityManager.hpp
src/include/operators/: entity_overloads.hpp
src/include/systems/: camera.hpp  cameraManager.hpp  collision.hpp  movement.hpp  render.hpp  trigger.hpp
src/include/systems/ui/: message.hpp
src/include/utils/: camera.hpp
src/systems/: cameraManager.cpp  collision.cpp  movement.cpp  render.cpp  trigger.cpp
src/systems/ui/: message.cpp
src/systems/utils/: camera.cpp
